@@ -17,4 +17,6 @@
     <a href="/form/newForm">New form</a><br />
     <a href="/index/modalSave">Modal save</a><br />
     <a href="/index/storage">Storage</a><br />
+    <a href="/index/confirm" class="ajaxlink">Confirm</a><br />
+    <a href="/index/alertRedirect" class="ajaxlink">Alert redirect</a><br />
 {% endblock %}
