@@ -6,6 +6,8 @@ $.fn.dialogbox = function (event = 'create', config = {}) {
         event = 'create';
     }
 
+    console.log(1, config);
+
     config.isDialogbox = $(this).hasClass('ui-dialog-content');
     config.id = config.isDialogbox
         ? $(this).attr('id')
@@ -23,6 +25,8 @@ $.fn.dialogbox = function (event = 'create', config = {}) {
     if (config.load && config.load[0] === '/') {
         config.load = config.load + '&dialogbox=1';
     }
+
+    console.log(2, config);
 
     switch (event) {
         case 'load':
@@ -90,6 +94,8 @@ $.fn.dialogbox = function (event = 'create', config = {}) {
 
                     break;
             }
+
+            console.log(config);
 
             let $dialog = $('<div id="' + config.id + '">' + config.content + '</div>', 'body').dialog({
                 title: config.title,
