@@ -1,0 +1,17 @@
+{% extends "MicroFramework/Layout/dialogbox.twig" %}
+
+{% block content %}
+    <center>
+        {{ message }}
+        <form method="POST" action="{{ app.here }}">
+            <input type="hidden" name="confirmAction" value="1" />
+            <input type="submit" value="Potwierdź" class="btn-primary mt-4" />
+        </form>
+    </center>
+
+    {{ app.id }}
+
+    <script>
+        $('#dialogbox_{{ app.id }}').dialogbox('close');
+    </script>
+{% endblock %}
